Handle `GiftCard#expires_at` properly, also better messages on checkout if expired/redeemed card is applied

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1095,8 +1095,10 @@ en:
     generate_code: Generate coupon code
     get_back_to_the: Get back to the
     gift_card: Gift Card
+    gift_card_already_redeemed: The Gift Card has already been redeemed.
     gift_card_applied: The Gift Card was successfully applied to your order!
     gift_card_batch: Gift Card Batch
+    gift_card_expired: The Gift Card has expired.
     gift_card_removed: The Gift Card was successfully removed from your order
     gift_card_using_store_credit_error: You can't apply the Gift Card after you applied the store credit.
     gift_cards: Gift Cards
